# muse-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  design.md  integration-log.md
museCLI.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
musecli/: __init__.py  cli.py  config.py  editor.py  formatting.py  insights.py  journal.py  model.py  notes.py  queue.py  stats.py  storage.py  utils.py
scripts/: check.sh
tests/: test_add_cli.py  test_cli.py  test_cli_surface.py  test_clipboard.py  test_inbox_queue.py  test_offline.py  test_stats.py  test_storage.py  test_vertical_slice.py
