[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "museCLI"
version = "0.1.0"
description = "MuseCLI: Prototype command-line tool"
authors = [{name = "Ibrahim Naqib"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12,<1.0",
]

[project.scripts]
muse = "musecli.cli:app"
[project.optional-dependencies]
dev = [
  "pytest>=7",
]

